# integrity

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  ENVIRONMENT.md  SETUP.md  agents.md  contract.py  contract_db.py  docker-compose.sandbox.yml  docker-compose.yml  fly.toml  main.py  package-lock.json  package.json  praise.md  pyproject.toml  readme.md  requirements.txt  sentinal.py  server.py  tailwind.config.js  todo.md
apps/: README.md  activities.py  agent_runs.py  blogs.py  browser_actions.py  browser_rules.py  connections.py  contracts.py  device.py  devices.py  events.py  home_assistant.py  kanban_tickets.py  network_signatures.py  projects.py  promises.py  reports.py  rtv.py  shortcuts.py  skills.py  thoughts.py  user_docs.py  users.py
docker/: init.sql
docs/: AI.md  README.md  apps.md  automation.md  backup-restore.md  browser-extension-implementation-plan.md  browser-extension-spec.md  browser-rules.md  browser-sync-history.md  environment.md  experience-modes.md  home-assistant.md  imports.md  license.md  mac-agent.md  mental-model.md  philosophy.md  processes.md  rasbhari.md  remote-pi-ops.md  rtv-test-loop.md  setup.md  testing-sandbox.md  testing.md
gabru/: README.md  app.py  auth.py  contracts.py  crud_db.py  db.py  eventing.py  log.py  process.py  readme.md  server.py  service.py
model/: README.md  activity.py  agent_run.py  application.py  assistant_command.py  blog.py  browser_action.py  browser_rule.py  connection.py  connection_interaction.py  contract.py  device.py  device_pairing.py  event.py  import_record.py  (+14 more)
(+177 files in other folders)
