[project]
name = "rasbhari"
version = "0.1.0"
description = "Event-driven personal OS built on the Gabru framework. Combines a Flask dashboard, PostgreSQL-backed services, and background workers to track projects, promises, activities, skills, connections, and behavioural patterns — designed to run comfortably on a Raspberry Pi."
readme = "readme.md"
requires-python = ">=3.14"
keywords = ["personal-os", "self-hosting", "flask", "postgresql", "raspberry-pi", "life-tracking"]
dependencies = [
    "annotated-types>=0.7.0",
    "blinker>=1.9.0",
    "click>=8.3.1",
    "flask>=3.1.3",
    "importlib-metadata>=9.0.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markupsafe>=3.0.3",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "protobuf>=7.34.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "sendgrid>=6.12.5",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.2",
    "ultralytics>=8.4.33",
    "werkzeug>=3.1.7",
    "zipp>=3.23.0",
]
